Handle OEM asm user passwords

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/generate_asm_password.yml
@@ -1,11 +1,20 @@
-- name: Set Application (Delius)
-  set_fact:
-    application: "{{ db_type + '-database' }}"
-
-- name: Get New Password for ASM
+- name: Get New Password for ASMSNMP
   include_tasks: create_random_password.yml
 
 - name: Record New ASM Password in Secrets
   include_tasks: record_secret_password.yml
   vars:
-    db_username: "asmsnmp"
+    db_username: "{{ 'asmsnmp' if (oem_db_name is not defined ) else 'ASMSNMP' }}"
+
+- name: Special Case For SYS ASM User (OEM)
+  when: oem_db_name is defined
+  block:
+
+    - name: Get New Password for ASMSYS (OEM)
+      include_tasks: create_random_password.yml
+
+    - name: Record New ASMSYS Password in Secrets
+      include_tasks: record_secret_password.yml
+      vars:
+        db_username: ASMSYS
+
