--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_asm_passwords.yml
@@ -3,3 +3,5 @@
   script: set_asm_password.sh
   environment:
     SECRET_NAME: "{{ secret_name }}"
+    SYS_USERNAME: "{{ 'sys' if (oem_db_name is not defined ) else 'ASMSYS' }}"
+    ASM_USERNAME: "{{ 'asmsnmp' if (oem_db_name is not defined ) else 'ASMSNMP' }}"
