--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
@@ -1,19 +1,16 @@
-- name: Set Application (Delius)
-  set_fact:
-    application: "{{ db_type + '-database' }}"
-
 - name: Get New Password for {{ db_username }}
   include_tasks: create_random_password.yml
-
+      
 - name: Record New Database Password for {{ db_username }} in Secret Manager
   include_tasks: record_secret_password.yml
 
 # We only need to change the password in the primary database
-- name: Set Password for {{ db_username }} in Database
+- name: Set Password for {{ db_username}} in Database
   script: set_db_password.sh
   register: set_db_password
   environment:
     DB_USERNAME: "{{ db_username }}"
     SECRET_NAME: "{{ secret_name }}"
+    OEM_DB_NAME: "{{ oem_db_name | default() }}"
   vars:
     ansible_aws_ssm_timeout: 60
