Correct environment name input name

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -98,7 +98,7 @@ permissions:
 jobs:          
   deployment:
     name: oracle-oem-password-rotation
-    environment: ${{ github.event.inputs.TargetEnvironment}}
+    environment: ${{ github.event.inputs.TargetOemEnvironment}}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
