Add Rotate Groups

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -106,10 +106,12 @@ jobs:
     continue-on-error: false
     steps:
 
-      - name: Prepare Ansbile OEM Target Host
+      - name: Prepare Ansbile OEM Target Host And Rotate Groups
         id: prepareoemtargethost
-        run: echo TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')" >> $GITHUB_OUTPUT
-
+        run: |
+          echo TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')" >> $GITHUB_OUTPUT
+          [[ "${{ github.events.inputs.RotateDatabasePasswords }}" == "yes" ]] && RG=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} || RG=NOROTATEGROUPS
+          echo RotateGroups="${RG}" >> $GITHUB_OUTPUT
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
         with:
@@ -159,6 +161,7 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $command -i $inventory \
+          -e rotate_groups=${{ steps.prepareoemtargethost.outputs.RotateGroups }} \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
           -e environment_name=${{ github.events.inputs.TargetEnvironmentName }}  \
           -e target_environment_name=${{ github.events.inputs.TargetEnvironmentName }} \
