Condition not run rotate oem database passwword if not specified

--- a/playbooks/oracle_password_rotation/password_rotation.yml
+++ b/playbooks/oracle_password_rotation/password_rotation.yml
@@ -4,7 +4,7 @@
   become: yes
   become_user: oracle
   roles:
-    - { role: all_password_rotation, when: ( not environment_name is search('hmpps-oem') ) or ( rotate_database_passwords | default(false) | bool ) }
+    - { role: all_password_rotation, when: ( environment_name is defined and not environment_name is search('hmpps-oem') ) or ( rotate_database_passwords | default(false) | bool ) }
 
 # Sync'ing OEM passwords will happen twice when run in the engineering accounts (once by the above job when calling out after changing passwords); and
 # then again below.   However this is a sync only and will not result in 2 password changes and so is harmless.   (We do not want to suppress the
