--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -109,9 +109,10 @@ jobs:
       - name: Prepare Ansbile OEM Target Host And Rotate Groups
         id: prepareoemtargethost
         run: |
-          echo TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')" >> $GITHUB_OUTPUT
-          [[ "${{ github.events.inputs.RotateDatabasePasswords }}" == "yes" ]] && RG=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} || RG=NOROTATEGROUPS
-          echo RotateGroups="${RG}" >> $GITHUB_OUTPUT
+          TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')"
+          echo "TargetOemHost=${TargetOemHost}" >> $GITHUB_OUTPUT
+          [[ "${{ github.events.inputs.RotateDatabasePasswords }}" == "yes" ]] && RotateGroups=${TargetOemHost} || RotateGroups=NOROTATEGROUPS
+          echo "RotateGroups=${RotateGroups}" >> $GITHUB_OUTPUT
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
         uses: actions/checkout@v4
         with:
