Missing sed global

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -109,7 +109,7 @@ jobs:
       - name: Prepare Ansbile OEM Target Host And Rotate Groups
         id: prepareoemtargethost
         run: |
-          TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/')"
+          TargetOemHost="environment_name_$(echo ${{ github.event.inputs.TargetOemEnvironment }}  | sed 's/-/_/g')"
           echo "TargetOemHost=${TargetOemHost}" >> $GITHUB_OUTPUT
           [[ "${{ github.events.inputs.RotateDatabasePasswords }}" == "yes" ]] && RotateGroups=${TargetOemHost} || RotateGroups=NOROTATEGROUPS
           echo "RotateGroups=${RotateGroups}" >> $GITHUB_OUTPUT
