--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -164,11 +164,11 @@ jobs:
           $command -i $inventory \
           -e rotate_groups=${{ steps.prepareoemtargethost.outputs.RotateGroups }} \
           -e oem_target=${{ steps.prepareoemtargethost.outputs.TargetOemHost }} \
-          -e environment_name=${{ github.events.inputs.TargetEnvironmentName }}  \
-          -e target_environment_name=${{ github.events.inputs.TargetEnvironmentName }} \
-          -e sync_monitoring_passwords=${{ github.events.inputs.SyncMonitoringPasswords }} \
-          -e sync_audit_wallet_password=${{ github.events.inputs.SyncAuditWalletPassword }} \
-          -e rotate_rman_password=${{ github.events.inputs.RotateRMANPassword }} \
-          -e rotate_oem_passwords=${{ github.events.inputs.RotateOEMPasswords }} \
-          -e rotate_database_passwords=${{ github.events.inputs.RotateDatabasePasswords }} ${{ github.events.inputs.VerboseOutput }} 
+          -e environment_name=${{ github.event.inputs.TargetEnvironmentName }}  \
+          -e target_environment_name=${{ github.event.inputs.TargetEnvironmentName }} \
+          -e sync_monitoring_passwords=${{ github.event.inputs.SyncMonitoringPasswords }} \
+          -e sync_audit_wallet_password=${{ github.event.inputs.SyncAuditWalletPassword }} \
+          -e rotate_rman_password=${{ github.event.inputs.RotateRMANPassword }} \
+          -e rotate_oem_passwords=${{ github.event.inputs.RotateOEMPasswords }} \
+          -e rotate_database_passwords=${{ github.event.inputs.RotateDatabasePasswords }} ${{ github.event.inputs.VerboseOutput }}
           
