Remove CONTACT_SEARCH_POOL

--- a/playbooks/audit_management/vars/main.yml
+++ b/playbooks/audit_management/vars/main.yml
@@ -60,4 +60,4 @@ default_audit_options:
       "GRANT ANY PRIVILEGE",
       "GRANT ANY ROLE",
     ]
-  NoAuditSessions: ["CONTACT_SEARCH_POOL"]
+  NoAuditSessions: []
