Change target environment names

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -13,16 +13,17 @@ on:
           - "hmpps-oem-preproduction"
           - "hmpps-oem-production"
       TargetEnvironmentName:
-        description: "Target Environment Name (e.g. delius-core-pre-prod)"
+        description: "Target Environment Name"
         type: choice
         options:
           - "hmpps-oem-development"
-          - "delius-core-dev"
+          - "delius-core-development"
           - "delius-core-test"
-          - "delius-core-training"
-          - "delius-core-stage"
-          - "delius-core-pre-prod"
-          - "delius-core-prod"
+          - "delius-core-preproduction"
+          - "delius-core-production"
+          - "delius-mis-development"
+          - "delius-mis-preproduction"
+          - "delius-mis-production"
       SyncMonitoringPasswords:
         description: "Sync EM Cloud Control Target Monitoring Passwords with Secret Manager"
         type: choice
