--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -1,3 +1,7 @@
+- name: Initialise Secrets Dictionary
+  set_fact:
+    secretsmanager_passwords_dict: {}
+
 - name: Setup Temporary Secrets Dictionary
   set_fact:
     secret_password_dict:
