Join when condition

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/unlock_system_passwords.yml
@@ -67,7 +67,8 @@
     # Must Use Local Authentication for SYS if it is Locked (ORA-28000 error) - force unlock of SYS account
     - name: Unlock SYS in Database and Force Timed Unlock
       script: unlock_sys_password.sh
-      when: get_sys_remote_lock.results | map(attribute='stdout') | list | select('search','.*ORA-28000.*') | list | count > 0
+      when: 
+        - get_sys_remote_lock.results | map(attribute='stdout') | list | select('search','.*ORA-28000.*') | list | count > 0
+        - oem_db_name is not defined
       vars:
         ansible_aws_ssm_timeout: 200
-      when: oem_db_name is not defined
