Conditions for unlock system users

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -1,5 +1,7 @@
 - name: Clean Up Broken or Missing Data Guard Wallets
+  when: unlock_system_passwords is not defined
   block:
+  
     - name: Set up oracle database home
       shell: |
         . ~/.bash_profile
@@ -33,6 +35,7 @@
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
 - name: Disable Monitoring
+  when: unlock_system_passwords is not defined
   block:
     - name: Start database monitoring blackout
       include_role:
@@ -80,6 +83,7 @@
     APPLICATION=$(aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=application"  --query "Tags[].Value" --output text)
     echo ${ENVIRONMENT_NAME}-${DELIUS_ENVIRONMENT}-${APPLICATION}-dba-passwords
   register: build_secret_name
+  run_once: yes
 
 - name: Set Secret Manager Name
   set_fact:
@@ -87,6 +91,7 @@
 
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
+  when: unlock_system_passwords is not defined
   block:
     # Do not specify database login credentials as will login as SYS on primary
     - name: Set Profile for DBSNMP on Primary
@@ -242,21 +247,7 @@
 
     - name: Rotate Oracle Password
       include_tasks: rotate_oracle_password.yml
-
-    # Unlock database accounts in case they have become locked whilst waiting for OEM target password updates.
-    # (This should not happen due to Gradual Database Password Rollover but it can happen if the passwords
-    #  are changed more than once per hour since any interim passwords cannot be used).
-    # We only unlock passwords which have recently become locked.
-    - name: Unlock Accounts for SYS, SYSTEM, DBSNMP
-      include_tasks: unlock_system_passwords.yml
-      vars:
-        db_username: "{{ username }}"
-        db_type: "{{ database_type }}"
-      loop: ["sys", "system", "dbsnmp"]
-      loop_control:
-        loop_var: username
-      when:
-        - database_primary_sid is defined
+        
   # Restart Monitoring regardless of success of password rotation
   always:
     - name: Re-Enable Monitoring
@@ -283,3 +274,19 @@
           vars:
             action: "stop"
             blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+
+# Unlock database accounts in case they have become locked whilst waiting for OEM target password updates.
+# (This should not happen due to Gradual Database Password Rollover but it can happen if the passwords
+#  are changed more than once per hour since any interim passwords cannot be used).
+# We only unlock passwords which have recently become locked.
+- name: Unlock Accounts for SYS, SYSTEM, DBSNMP
+  include_tasks: unlock_system_passwords.yml
+  vars:
+    db_username: "{{ username }}"
+    db_type: "{{ database_type }}"
+  loop: ["sys", "system", "dbsnmp"]
+  loop_control:
+    loop_var: username
+  when:
+    - database_primary_sid is defined
+    - unlock_system_passwords is defined
