Upper case asmsnmp username

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -116,7 +116,7 @@
       vars:
         account_name: "{{ target_environment_name }}"
         secret_name: "{{ '/ec2/' + ec2_name + '/asm-passwords' if (target_environment_name is search('hmpps-oem')) else target_environment_name + '-' + target_env.split()[0] + '-' + target_env.split()[1] + '-dba-passwords' }}"
-        db_username: ASMSNMP
+        db_username: "{{ 'ASMSNMP'  if (target_environment_name is search('hmpps-oem')) else 'asmsnmp' }}"
         monitor_type: osm_instance
         monitor_role: SYSASM
       loop: "{{ environment_list }}"
