Add job to sync OEM targets

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -52,7 +52,7 @@ permissions:
   id-token: write
 
 jobs:          
-  deployment:
+  oracle_password_rotation:
     name: oracle-password-rotation
     environment: ${{ github.event.inputs.TargetEnvironment}}
     runs-on: ubuntu-latest
@@ -60,6 +60,8 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     continue-on-error: false
+    outputs:
+      TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -100,13 +102,6 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Install yq
-        uses: dcarbone/install-yq-action@v1.1.1
-        with:
-          download-compressed: true
-          version: "v4.35.1"
-          force: true
-
       - name: Define Targets
         id: definetargets
         working-directory: ${{ env.inventory }}
@@ -117,10 +112,7 @@ jobs:
             databasetype=${1}
             if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
             then
-              high_availability_count=$(yq .high_availability_count.${databasetype} group_vars/${prefix}_all.yml)
-              [ $high_availability_count -le 2 ] && targets="${targets}${prefix}_${databasetype}_primarydb,"
-              [ $high_availability_count -eq 1 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,"
-              [ $high_availability_count -eq 2 ] && targets="${targets}${prefix}_${databasetype}_standbydb1,${prefix}_${databasetype}_standbydb2,"
+              targets="${targets}${prefix}_${databasetype}_dbs,"
             fi
             echo
           }
@@ -131,6 +123,22 @@ jobs:
           echo "targets=$targets"
           echo "targets=$targets" >> $GITHUB_OUTPUT
 
+          case ${{ github.event.inputs.TargetEnvironment}} in
+            delius-core-dev)
+              TargetOemEnvironment=hmpps-oem-development
+              ;;
+            delius-core-test|delius-core-training)
+              TargetOemEnvironment=hmpps-oem-test
+              ;;
+            delius-core-stage|delius-core-pre-prod)
+              TargetOemEnvironment=hmpps-oem-preproduction
+              ;;
+            delius-core-prod)
+              TargetOemEnvironment=hmpps-oem-production
+              ;;
+          esac
+          echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
+
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
@@ -139,12 +147,81 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Start Ansible Password Rotation
+      - name: Start Ansible Database Password Rotation
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $command -i $inventory \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name ${{ github.events.inputs.TargetEnvironment }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
-          
+          -e environment_name=${{ github.events.inputs.TargetEnvironment }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+
+  oracle_update_oem_targets:
+    name: oracle_update_oem_targets
+    needs: oracle_password_rotation
+    environment: ${{ needs.oracle_password_rotation.outputs.TargetOEMEnvironment }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
+
+      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_password_rotation
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+            ansible/roles/get-modernisation-platform-facts
+          path: roles
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Start Ansible Update OEM Targets
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+          $command -i $inventory \
+          -e rotate_groups=NONE \
+          -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
+          -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
+          -e target_environment_name=${{ github.event.inputs.TargetEnvironment }} \
+          -e sync_monitoring_passwords=yes \
+          -e sync_audit_wallet_password=no \
+          -e rotate_rman_password=no \
+          -e rotate_oem_passwords=no \
+          -e rotate_database_passwords=no ${{ github.event.inputs.VerboseOutput }}
