Split command variable

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -42,7 +42,8 @@ on:
         default: "main"
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_password_rotation/password_rotation.yml
+  database_command: ansible-playbook operations/playbooks/oracle_password_rotation/database_password_rotation.yml
+  oem_command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
@@ -152,7 +153,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $command -i $inventory \
+          $database_command -i $inventory \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
           -e environment_name=${{ github.events.inputs.TargetEnvironment }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
 
@@ -215,7 +216,7 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $command -i $inventory \
+          $oem_command -i $inventory \
           -e rotate_groups=NONE \
           -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
           -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
