Correct target environment name

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -63,6 +63,7 @@ jobs:
     continue-on-error: false
     outputs:
       TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
+      TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -127,18 +128,23 @@ jobs:
           case ${{ github.event.inputs.TargetEnvironment}} in
             delius-core-dev)
               TargetOemEnvironment=hmpps-oem-development
+              TargetEnvironmentName=delius-core-development
               ;;
             delius-core-test|delius-core-training)
               TargetOemEnvironment=hmpps-oem-test
+              TargetEnvironmentName=delius-core-test
               ;;
             delius-core-stage|delius-core-pre-prod)
               TargetOemEnvironment=hmpps-oem-preproduction
+              TargetEnvironmentName=delius-core-preproduction
               ;;
             delius-core-prod)
               TargetOemEnvironment=hmpps-oem-production
+              TargetEnvironmentName=delius-core-production
               ;;
           esac
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironmentName=${TargetEnvironmentName}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
         id: login-aws
@@ -158,7 +164,7 @@ jobs:
           -e environment_name=${{ github.events.inputs.TargetEnvironment }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
 
   oracle_update_oem_targets:
-    name: oracle_update_oem_targets
+    name: oracle-update-oem-targets
     needs: oracle_password_rotation
     environment: ${{ needs.oracle_password_rotation.outputs.TargetOEMEnvironment }}
     runs-on: ubuntu-latest
@@ -220,7 +226,7 @@ jobs:
           -e rotate_groups=NONE \
           -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
           -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
-          -e target_environment_name=${{ github.event.inputs.TargetEnvironment }} \
+          -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
           -e sync_monitoring_passwords=yes \
           -e sync_audit_wallet_password=no \
           -e rotate_rman_password=no \
