Remove rotate_database_passwords ansible parameter

--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -171,6 +171,5 @@ jobs:
           -e sync_monitoring_passwords=${{ github.event.inputs.SyncMonitoringPasswords }} \
           -e sync_audit_wallet_password=${{ github.event.inputs.SyncAuditWalletPassword }} \
           -e rotate_rman_password=${{ github.event.inputs.RotateRMANPassword }} \
-          -e rotate_oem_passwords=${{ github.event.inputs.RotateOEMPasswords }} \
-          -e rotate_database_passwords=${{ github.event.inputs.RotateDatabasePasswords }} ${{ github.event.inputs.VerboseOutput }}
+          -e rotate_oem_passwords=${{ github.event.inputs.RotateOEMPasswords }} ${{ github.event.inputs.VerboseOutput }}
           
