Unlock password refactor

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/oem_database_passwords.yml
@@ -4,6 +4,7 @@
 
 # Disable OEM Native Monitoring to avoid noise due to agent / broker connection failures during password changes
 - name: Disable Monitoring
+  when: unlock_system_passwords is not defined
   block:
     - name: Start database monitoring blackout
       include_role:
@@ -30,11 +31,13 @@
 # This will usually be the OEM Repository database and RMAN catalog database
 
 - name: Rotate OEM Related Database Passwords
+  when: unlock_system_passwords is not defined
   block:
     - name: Rotate OEM and RMAN Database Passwords
       include_tasks: rotate_oem_database_passwords.yml
       vars:
         oem_db_name: "{{ database_name }}"
+        secret_name: /oracle/database/{{ database_name }}/passwords"
       loop:
         - "{{ db_configs['RCVCAT']['rcvcat_db_name'] }}"
         - "{{ db_configs['EMREP']['emrepo_db_name'] }}"
@@ -84,3 +87,14 @@
           vars:
             action: "stop"
             blackout: "PASSWORD_ROTATION_{{ environment_name }}"
+
+- name: Unlock Accounts for SYS, SYSTEM, DBSNMP On OEM Databases
+  include_tasks: unlock_system_passwords.yml
+  vars:
+    db_username: "{{ item.0 }}"
+    oem_db_name: "{{ item.1 }}"
+    secret_name: "/oracle/database/{{ item.1 }}/passwords"
+  with_nested:
+    - ["sys", "system", "dbsnmp"]
+    - ["{{ db_configs['RCVCAT']['rcvcat_db_name'] }}", "{{ db_configs['EMREP']['emrepo_db_name'] }}"]
+  when: unlock_system_passwords is defined
