Reduce conditions to run role

--- a/playbooks/oracle_password_rotation/database_password_rotation.yml
+++ b/playbooks/oracle_password_rotation/database_password_rotation.yml
@@ -6,5 +6,5 @@
   roles:
     - {
         role: all_password_rotation,
-        when: ( environment_name is defined and not environment_name is search('hmpps-oem') ) or ( rotate_database_passwords | default(false) | bool ),
+        when: ( environment_name is defined )
       }
