Unlock system users job

--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -8,6 +8,10 @@ on:
         required: true
         type: choice
         options:
+          - "hmpps-oem-development"
+          - "hmpps-oem-test"
+          - "hmpps-oem-preproduction"
+          - "hmpps-oem-production"
           - "delius-core-dev"
           - "delius-core-test"
           - "delius-core-training"
@@ -55,7 +59,7 @@ permissions:
 jobs:          
   oracle_password_rotation:
     name: oracle-password-rotation
-    environment: ${{ github.event.inputs.TargetEnvironment}}
+    environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
@@ -64,6 +68,7 @@ jobs:
     outputs:
       TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
       TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
+      RotateGroups: ${{ steps.definetargets.outputs.targets }}
     steps:
 
       - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
@@ -125,7 +130,7 @@ jobs:
           echo "targets=$targets"
           echo "targets=$targets" >> $GITHUB_OUTPUT
 
-          case ${{ github.event.inputs.TargetEnvironment}} in
+          case ${{ github.event.inputs.TargetEnvironment }} in
             delius-core-dev)
               TargetOemEnvironment=hmpps-oem-development
               TargetEnvironmentName=delius-core-development
@@ -141,6 +146,10 @@ jobs:
             delius-core-prod)
               TargetOemEnvironment=hmpps-oem-production
               TargetEnvironmentName=delius-core-production
+              ;;
+            *oem*)
+              TargetOemEnvironment=${{ github.event.inputs.TargetEnvironment }}
+              TargetEnvironmentName=${{ github.event.inputs.TargetEnvironment }}
               ;;
           esac
           echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
@@ -230,5 +239,56 @@ jobs:
           -e sync_monitoring_passwords=yes \
           -e sync_audit_wallet_password=no \
           -e rotate_rman_password=no \
-          -e rotate_oem_passwords=no \
-          -e rotate_database_passwords=no ${{ github.event.inputs.VerboseOutput }}
+          -e rotate_oem_passwords=no ${{ github.event.inputs.VerboseOutput }}
+
+  oracle_unlock_system_users:
+    name: oracle-unlock-system-users
+    needs: [oracle_password_rotation, oracle_update_oem_targets]
+    environment: ${{ github.event.inputs.TargetEnvironment }}
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
+    timeout-minutes: 1440
+    continue-on-error: false
+    steps:
+
+      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_password_rotation
+            playbooks/ansible.cfg
+          path: operations
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/hosts
+            ansible/group_vars
+          path: inventory
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        id: login-aws
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+          aws-region: "eu-west-2"
+
+      - name: Start Ansible Unlock System Users
+        shell: bash
+        run: |
+          export ANSIBLE_CONFIG=$ansible_config
+          $database_command -i $inventory \
+          -e rotate_groups=${{ ${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
+          -e environment_name=${{ github.events.inputs.TargetEnvironment }} \
+          -e unlock_system_passwords=yes ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+
