--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -288,7 +288,6 @@ jobs:
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $database_command -i $inventory \
-          -e rotate_groups=${{ ${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
+          -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
           -e environment_name=${{ github.events.inputs.TargetEnvironment }} \
           -e unlock_system_passwords=yes ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
-
