--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -174,7 +174,7 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${{ github.events.inputs.TargetEnvironment }} ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+          -e environment_name=${{ github.event.inputs.TargetEnvironment }} ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
 
   oracle_update_oem_targets:
     name: oracle-update-oem-targets
@@ -293,5 +293,5 @@ jobs:
           export ANSIBLE_CONFIG=$ansible_config
           $database_command -i $inventory \
           -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
-          -e environment_name=${{ github.events.inputs.TargetEnvironment }} \
-          -e unlock_system_passwords=yes ${{ github.events.inputs.VerboseOutput }} ${{ github.events.inputs.AnsibleForks }}
+          -e environment_name=${{ github.event.inputs.TargetEnvironment }} \
+          -e unlock_system_passwords=yes ${{ github.event.inputs.VerboseOutput }} ${{ github.event.inputs.AnsibleForks }}
